--- a/src/main/resources/PDF_file/Prescription.html
+++ b/src/main/resources/PDF_file/Prescription.html
@@ -1,10 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>처방전</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+        .info-table {
+            border-collapse: collapse;
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
+            border: 1px solid #000;
+        }
+        .info-table th, .info-table td {
+            border: 1px solid #000;
+            padding: 8px;
+            text-align: center;
+            font-size:12px;
+        }
+        .info-table th {
+            background-color: #f2f2f2;
+            font-weight: bold;
+        }
+        .info-table .rowspan {
+            text-align: center;
+            font-weight: bold;
+        }
+        .info-table .medical-header {
+            text-align: center;
+            font-weight: bold;
+        }
+        /* 셀 크기 조절 */
+        .info-table .cell-large {
+            width: 200px;
+            height: 20px;
+        }
+        .info-table .cell-small {
+            width: 50px;
+            height: 20px;
+        }
+    </style>
+
 </head>
 <body>
-$END$
+<h1 style="text-align: center;">처 방 전</h1>
+<table class="info-table">
+    <tr>
+        <th class="rowspan cell-small" rowspan="2">환<br>자<br>정<br>보</th>
+        <th class="cell-small">이름</th>
+        <td class="cell-large"></td>
+        <th class="medical-header cell-small" rowspan="2">의<br>료<br>기<br>관</th>
+        <th class="cell-small">명칭</th>
+        <td class="cell-large"></td>
+    </tr>
+    <tr>
+        <th class="cell-small">전화번호</th>
+        <td class="cell-large"></td>
+        <th class="cell-small">전화번호</th>
+        <td class="cell-large"></td>
+    </tr>
+</table>
+<table class="info-table">
+    <tr>
+        <th class="cell-small">진단명</th>
+        <td class="cell-large"></td>
+        <th class="cell-small">의사 이름</th>
+        <td class="cell-large"></td>
+    </tr>
+</table>
+
+<table class="info-table">
+    <tr>
+        <th class="cell-large">처방 의약품의 명칭</th>
+        <th class="cell-small">투약량</th>
+        <th class="cell-small">용법</th>
+    </tr>
+    <tr>
+        <td style="text-align: center; vertical-align: top; font-size:12px; height: 500px;">
+            <%
+            // 요청 파라미터에서 환자 이름을 가져옴
+            String patientName = PDF_printer.getPatient_nameName();
+            %>
+        </td>
+        <td style="text-align: center; vertical-align: top; font-size:12px;">
+            <script>
+                document.write("해봅시다");
+            </script>
+        </td>
+        <td style="text-align: center; vertical-align: top; font-size:12px;">
+            <script>
+                document.write("해봅시다");
+            </script>
+        </td>
+    </tr>
+</table>
+
+
+<p style="text-align: center; font-size:12px;">사용기간 : 교부일로 부터 (___)일간 사용기간 내에 약국에 제출해야 합니다.</p>
+<table class="info-table">
+    <tr>
+        <th class="rowspan cell-small" rowspan="3">제<br>조<br>내<br>역</th>
+        <th class="cell-small">제조기관</th>
+        <td class="cell-large"></td>
+        <td style="width: 50px; font-size:8px;">처방의 변경, 수령, 확인, 대체시 그 내용 등</td>
+    </tr>
+    <tr>
+        <th class="cell-small">제조약사</th>
+        <td class="cell-large"></td>
+    </tr>
+    <tr>
+        <th class="cell-small">조제날자</th>
+        <td class="cell-large"></td>
+    </tr>
+</table>
 </body>
 </html>
