--- a/src/main/resources/PDF_file/Prescription.html
+++ b/src/main/resources/PDF_file/Prescription.html
@@ -83,10 +83,9 @@
     </tr>
     <tr>
         <td style="text-align: center; vertical-align: top; font-size:12px; height: 500px;">
-            <%
-            // 요청 파라미터에서 환자 이름을 가져옴
-            String patientName = PDF_printer.getPatient_nameName();
-            %>
+            <script src="/sw1/hosp/PDF_printer.java">
+
+            </script>
         </td>
         <td style="text-align: center; vertical-align: top; font-size:12px;">
             <script>
